--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 </head>
 <body>
 <h2>Where your journey begins</h2>
+<h3>We sell both preloved and brandnew vehicles</h3>
 <p>Second hand 2020 Toyota Hilux GR-Sport -P821 900</p>
 <p>Brand New 2025 Ford Raptor 3.0 v6 Ecoboost -P1 199 999</p>
 <p>Second Hand 2022 Toyota Hybrid Corrola Cross -P280 700</p>
 <p>Brand New Volkswagen Polo Vivo Hatch -P371 900</p>
 <p>Second Hand Toyota Cressida 2.0 GS -P175 000</p>
-<h3>Botswana,Gaborone 134 Maploe street Warehouse 4 </h3>
-<h3>email:speedastmotors@yahoo.com , 686 257497 </h3>
+<h4>Botswana,Gaborone 134 Maple street Warehouse 4 </h4>
+<h4>email:speedastmotors@yahoo.com , Number:686 257497 , Fax number:(+267) 73 476 238 </h4>
 </body>
 </html>
