--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
 <p>Second Hand Toyota Cressida 2.0 GS -P175 000</p>
 <h4>Botswana,Gaborone 134 Maple street Warehouse 4 </h4>
 <h4>email:speedastmotors@yahoo.com , Number:686 257497 , Fax number:(+267) 73 476 238 </h4>
+<h3> Operation Hours</h3>
+<h5>Monday to Friday- 0830hrs to 1630hrs</h5>
+<h5>Saturday-0900hrs to 1430hrs </h5>
+<h5>Sunday (Open for car collection only/final processing)-0900 to 1300hrs</h5>
 </body>
 </html>
