--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Speedstar</title>
+<h1></h1><title>Speedstar</title></h1>
 </head>
 <body>
 <h2>Where your journey begins</h2>
