--- a/index.html
+++ b/index.html
@@ -1,20 +1,27 @@
 <html>
 <head>
-<h1><title>Speedstar</title></h1>
+<title>Speedstar</title>
 </head>
 <body>
-<h2>Where your journey begins</h2>
+<h2<b> style=''color:Tomato;''> Where your journey begins></b></h2>
 <h3>We sell both preloved and brandnew vehicles</h3>
-<p>Second hand 2020 Toyota Hilux GR-Sport -P821 900</p>
+<p>Second hand 2020 Toyota Hilux GR-Sport</p>
+        <p>Sarts at BWP 821 000 / available on payment plan</p>
 <p>Brand New 2025 Ford Raptor 3.0 v6 Ecoboost -P1 199 999</p>
-<p>Second Hand 2022 Toyota Hybrid Corrola Cross -P280 700</p>
-<p>Brand New Volkswagen Polo Vivo Hatch -P371 900</p>
+        <p>Starts at BWP 1 199 000 / available on payment plan</p>
+<p>Second Hand 2022 Toyota Hybrid Corrola Cross</p>
+        <p>Starts at BWP 275 000 (not available on payment plan)
+<p>Brand New Volkswagen Polo Vivo Hatch back</p>
+        <p>Starts at BWP 371 900 / available on payment plan</p>
 <p>Second Hand Toyota Cressida 2.0 GS -P175 000</p>
+         <p>Starts at BWP 85 000 (not available on payment plan)</p>
 <h4>Botswana,Gaborone 134 Maple street Warehouse 4 </h4>
-<h4>email:speedastmotors@yahoo.com , Number:686 257497 , Fax number:(+267) 73 476 238 </h4>
-<h3> Operation Hours</h3>
+<h4><i>Email:speedastmotors@yahoo.com</i></h4>
+<h4><i>Number:686 257497</i></h4>
+<h4><i>Fax number:(+267) 73 476 238</i></h4>
+<h3><b>Operation Hours</b></h3>
 <h5>Monday to Friday- 0830hrs to 1630hrs</h5>
-<h5>Saturday-0900hrs to 1430hrs </h5>
+<h5>Saturday-0900hrs to 1430hrs</h5>
 <h5>Sunday (Open for car collection only/final processing)-0900 to 1300hrs</h5>
 </body>
 </html>
