--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
 <h3>We sell both preloved and brandnew vehicles</h3>
 <p>Second hand 2020 Toyota Hilux GR-Sport</p>
         <p>Sarts at BWP 821 000 / available on payment plan</p>
-<p>Brand New 2025 Ford Raptor 3.0 v6 Ecoboost -P1 199 999</p>
+<p>Brand New 2025 Ford Raptor 3.0 v6 Ecoboost</p>
         <p>Starts at BWP 1 199 000 / available on payment plan</p>
 <p>Second Hand 2022 Toyota Hybrid Corrola Cross</p>
         <p>Starts at BWP 275 000 (not available on payment plan)
 <p>Brand New Volkswagen Polo Vivo Hatch back</p>
         <p>Starts at BWP 371 900 / available on payment plan</p>
-<p>Second Hand Toyota Cressida 2.0 GS -P175 000</p>
+<p>Second Hand Toyota Cressida 2.0 GS</p>
          <p>Starts at BWP 85 000 (not available on payment plan)</p>
 <h4>Botswana,Gaborone 134 Maple street Warehouse 4 </h4>
 <h4><i>Email:speedastmotors@yahoo.com</i></h4>
