--- a/index.html
+++ b/index.html
@@ -3,18 +3,23 @@
 <title>Speedstar</title>
 </head>
 <body>
-<h2<b> style=''color:Tomato;''> Where your journey begins></b></h2>
+<h2<b>Where your journey begins</b></h2>
 <h3>We sell both preloved and brandnew vehicles</h3>
 <p>Second hand 2020 Toyota Hilux GR-Sport</p>
-        <p>Sarts at BWP 821 000 / available on payment plan</p>
+<p>Sarts at BWP 821 000 / available on payment plan</p>
+<button type="button">Purchase</button>
 <p>Brand New 2025 Ford Raptor 3.0 v6 Ecoboost</p>
-        <p>Starts at BWP 1 199 000 / available on payment plan</p>
+<p>Starts at BWP 1 199 000 / available on payment plan</p>
+<button type="button">Purchase</button>        
 <p>Second Hand 2022 Toyota Hybrid Corrola Cross</p>
-        <p>Starts at BWP 275 000 (not available on payment plan)
+<p>Starts at BWP 275 000 (not available on payment plan)
+<button type="button">Purchase</button>       
 <p>Brand New Volkswagen Polo Vivo Hatch back</p>
-        <p>Starts at BWP 371 900 / available on payment plan</p>
+<p>Starts at BWP 371 900 / available on payment plan</p>
+<button type="button">Purchase</button>      
 <p>Second Hand Toyota Cressida 2.0 GS</p>
-         <p>Starts at BWP 85 000 (not available on payment plan)</p>
+<p>Starts at BWP 85 000 (not available on payment plan)</p>
+<button type="button">Purchase</button>       
 <h4>Botswana,Gaborone 134 Maple street Warehouse 4 </h4>
 <h4><i>Email:speedastmotors@yahoo.com</i></h4>
 <h4><i>Number:686 257497</i></h4>
