--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <title>Speedstar</title>
 </head>
 <body>
+<h1>Speedstar motors</h1>
+</header>
 <h2<b>Where your journey begins</b></h2>
 <h3>We sell both preloved and brandnew vehicles</h3>
 <p>Second hand 2020 Toyota Hilux GR-Sport</p>
