--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <p>Starts at BWP 1 199 000 / available on payment plan</p>
 <button type="button">Purchase</button>        
 <p>Second Hand 2022 Toyota Hybrid Corrola Cross</p>
-<p>Starts at BWP 275 000 (not available on payment plan)
+<p>Starts at BWP 275 000 (not available on payment plan)</p>
 <button type="button">Purchase</button>       
 <p>Brand New Volkswagen Polo Vivo Hatch back</p>
 <p>Starts at BWP 371 900 / available on payment plan</p>
